@@ -3112,7 +3112,7 @@ literal|null
 condition|)
 name|result
 operator|.
-name|add
+name|addFrequency
 argument_list|(
 name|token
 argument_list|,
