@@ -1269,7 +1269,7 @@ argument_list|)
 expr_stmt|;
 name|result
 operator|.
-name|add
+name|addFrequency
 argument_list|(
 name|token
 argument_list|,
