@@ -154,6 +154,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|SpellingParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|NamedList
@@ -987,14 +1003,9 @@ operator|.
 name|tokens
 control|)
 block|{
-name|SuggestWord
-index|[]
-name|suggestions
+name|Term
+name|term
 init|=
-name|checker
-operator|.
-name|suggestSimilar
-argument_list|(
 operator|new
 name|Term
 argument_list|(
@@ -1005,6 +1016,16 @@ operator|.
 name|toString
 argument_list|()
 argument_list|)
+decl_stmt|;
+name|SuggestWord
+index|[]
+name|suggestions
+init|=
+name|checker
+operator|.
+name|suggestSimilar
+argument_list|(
+name|term
 argument_list|,
 name|options
 operator|.
@@ -1021,6 +1042,22 @@ argument_list|,
 name|accuracy
 argument_list|)
 decl_stmt|;
+name|result
+operator|.
+name|addFrequency
+argument_list|(
+name|token
+argument_list|,
+name|options
+operator|.
+name|reader
+operator|.
+name|docFreq
+argument_list|(
+name|term
+argument_list|)
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|SuggestWord
@@ -1028,6 +1065,7 @@ name|suggestion
 range|:
 name|suggestions
 control|)
+block|{
 name|result
 operator|.
 name|add
@@ -1043,6 +1081,7 @@ operator|.
 name|freq
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 return|return
 name|result
