@@ -72,6 +72,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|CommonParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|NamedList
@@ -100,6 +116,36 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|handler
+operator|.
+name|component
+operator|.
+name|SpellCheckComponent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|request
+operator|.
+name|LocalSolrQueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|search
 operator|.
 name|SolrIndexSearcher
@@ -117,6 +163,20 @@ operator|.
 name|util
 operator|.
 name|RefCounted
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|TestHarness
 import|;
 end_import
 
@@ -171,7 +231,7 @@ name|Exception
 block|{
 name|initCore
 argument_list|(
-literal|"solrconfig.xml"
+literal|"solrconfig-spellcheckcomponent.xml"
 argument_list|,
 literal|"schema.xml"
 argument_list|)
@@ -249,6 +309,25 @@ argument_list|,
 literal|"teststop"
 argument_list|,
 literal|"solr foo"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|h
+operator|.
+name|validateUpdate
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"4"
+argument_list|,
+literal|"teststop"
+argument_list|,
+literal|"another foo"
 argument_list|)
 argument_list|)
 argument_list|)
@@ -564,6 +643,63 @@ name|searcher
 operator|.
 name|decref
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testOnlyMorePopularWithExtendedResults
+specifier|public
+name|void
+name|testOnlyMorePopularWithExtendedResults
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"teststop:fox"
+argument_list|,
+literal|"qt"
+argument_list|,
+literal|"spellCheckCompRH"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_DICT
+argument_list|,
+literal|"direct"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_EXTENDED_RESULTS
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_ONLY_MORE_POPULAR
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='fox']/int[@name='origFreq']=1"
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='fox']/arr[@name='suggestion']/lst/str[@name='word']='foo'"
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='fox']/arr[@name='suggestion']/lst/int[@name='freq']=2"
+argument_list|,
+literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/bool[@name='correctlySpelled']='true'"
+argument_list|)
 expr_stmt|;
 block|}
 block|}
